k8s/manifests/monitoring/promtail.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: promtail
  namespace: ${NAMESPACE}
  labels:
    app.kubernetes.io/part-of: nemesis
    app.kubernetes.io/name: promtail
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: promtail
  template:
    metadata:
      labels:
        app.kubernetes.io/name: promtail
      annotations:
        dapr.io/enabled: "false"
    spec:
      serviceAccountName: promtail
      containers:
        - name: promtail
          image: "${PROMTAIL_IMAGE}"
          imagePullPolicy: ${IMAGE_PULL_POLICY}
          args:
            - "-config.file=/etc/promtail/config.yaml"
            - "-config.expand-env=true"
          volumeMounts:
            - name: config
              mountPath: /etc/promtail
            - name: pods-log
              mountPath: /var/log/pods
              readOnly: true
          resources:
            requests:
              cpu: ${PROMTAIL_CPU_REQUEST}
              memory: ${PROMTAIL_MEMORY_REQUEST}
            limits:
              cpu: ${PROMTAIL_CPU_LIMIT}
              memory: ${PROMTAIL_MEMORY_LIMIT}
      volumes:
        - name: config
          configMap:
            name: promtail-config
        - name: pods-log
          hostPath:
            path: /var/log/pods
