k8s/manifests/monitoring/ingressroute-monitoring.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nemesis-monitoring-ingress
  namespace: ${NAMESPACE}
  labels:
    app.kubernetes.io/part-of: nemesis
spec:
  entryPoints:
    - websecure
  routes:
    # Grafana
    - match: PathPrefix(`/grafana`)
      kind: Rule
      priority: 10
      middlewares:
        - name: nemesis-basic-auth
          namespace: ${NAMESPACE}
      services:
        - name: grafana
          port: ${GRAFANA_PORT}

    # Prometheus
    - match: PathPrefix(`/prometheus`)
      kind: Rule
      priority: 10
      middlewares:
        - name: nemesis-basic-auth
          namespace: ${NAMESPACE}
      services:
        - name: prometheus
          port: ${PROMETHEUS_PORT}

    # Jaeger
    - match: PathPrefix(`/jaeger`)
      kind: Rule
      priority: 10
      middlewares:
        - name: nemesis-basic-auth
          namespace: ${NAMESPACE}
      services:
        - name: jaeger
          port: ${JAEGER_PORT}

  tls:
    secretName: ${TLS_SECRET_NAME}
